# ribbot

./: Cargo.toml  README.md
.github/workflows/: ci.yml
config/: 2023-11-02-1698892236.toml  2023-12-01-1701468200.toml
src/: github-repos.txt  main.rs  rib-config.toml
