[package]
name = "ribbot"
version = "0.1.0"
authors = ["Aimee Zhu <aimeedeer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
anyhow = "1.0.27"
structopt = "0.3.12"
chrono = { version = "0.4.11", features = ["serde"] }
serde_json = "1.0.50"
toml = "0.5.6"
serde_derive = "1.0.105"
serde = "1.0.105"


