[package]
name = "ribbot"
version = "0.1.0"
authors = ["Aimee Zhu <aimeedeer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
anyhow = "1.0.45"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.70"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.130"
clap = { version = "3.0.2", features = ["derive"] }

